--- a/coffee_project/src/main/resources/templates/product/edit.html
+++ b/coffee_project/src/main/resources/templates/product/edit.html
@@ -8,8 +8,8 @@
     <style>
         .form-container {
             position: relative;
-            border-radius: 10px;
-            border: 1px solid #ccc;
+            /*border-radius: 10px;*/
+            /*border: 1px solid #ccc;*/
             padding: 20px;
             margin-top: 50px;
             margin-left: 10px;
@@ -19,11 +19,11 @@
         }
 
         #imagePreview {
-            max-width: 100%;
+            max-width: 89%;
             max-height: 100%;
             object-fit: contain;
             margin-bottom: 10px;
-            margin-top: 50px;
+            margin-top: 60px;
         }
         @media screen and (max-width: 768px) {
             .form-container {
@@ -47,70 +47,79 @@
         <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
             <h1 style="text-align: center">Cập Nhật Sản Phẩm </h1>
             <form action="/product/edit" method="post" th:object="${product}">
+                <input type="hidden" th:field="*{productId}">
                 <div class="container">
-                    <form action="/product/edit" method="post" th:object="${product}">
-                        <input type="hidden" th:field="*{productId}">
                         <div style="display: inline-flex;">
                             <div class="col-md-4">
-                                <div class="image-container" style="width: 100%">
-                                    <img id="imagePreview"  th:src="*{productImagePath}" alt="" class="img-thumbnail">
+                                <div class="image-container">
+                                    <img id="imagePreview" th:src="*{productImagePath}" alt="" class="img-thumbnail">
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="btnThumbnailURL" class="form-control">Chọn ảnh</label>
-                                    <input type="hidden" id="thumbnailURL" th:field="*{productImagePath}" />
-                                    <input id="btnThumbnailURL" type="file" style="display: none;" />
+                                    <label for="btnThumbnailURL" style="width: 89%" class="form-control">Chọn ảnh</label>
+                                    <input type="hidden" id="thumbnailURL" th:field="*{productImagePath}"/>
+                                    <input id="btnThumbnailURL" type="file" style="display: none;"/>
                                     <progress id="uploader" value="0" max="100">0%</progress>
                                 </div>
                             </div>
                             <div class="col-md-8">
-                                <div style="background-color: white" class="form-container">
+                                <div class="form-container">
                                     <div class="form-group">
                                         <div class="row">
-                                            <div class="col-md-4">
-                                                <b>Tên sản phẩm<span style="color: red">*</span></b>
-                                            </div>
-                                            <div class="col-md-8">
-                                                <input type="text" th:field="*{productName}" id="productName" class="form-control">
-                                                <div style="height: 20px">
-                                                    <small style="color: red" th:if="${#fields.hasErrors('productName')}" th:errors="*{productName}"></small>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="row">
-                                            <div class="col-md-4">
-                                                <b>Giá<span style="color: red">*</span></b>
-                                            </div>
-                                            <div class="col-md-8">
-                                                <input type="number" th:field="*{productPrice}" id="salary" class="form-control">
-                                                <div style="height: 20px">
-                                                    <small style="color: red" th:if="${#fields.hasErrors('productPrice')}" th:errors="*{productPrice}"></small>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="row">
-                                            <div class="col-md-4">
-                                                <b>Mô tả</b>
-                                            </div>
-                                            <div class="col-md-8">
-                                                <textarea type="text" th:field="*{productDescription}" id="productDescription" class="form-control"></textarea>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="row">
-                                            <div class="col-md-4">
-                                                <b>Chọn loại sản phẩm</b>
-                                            </div>
-                                            <div class="col-md-8">
-                                                <select th:field="*{productType}" id="productType" class="form-control">
-                                                    <option th:each="productType : ${productTypes}" th:value="${productType.productTypeId}" th:text="${productType.productTypeName}"></option>
-                                                </select>
-                                            </div>
+                                            <table class="table table-hover">
+                                                <tr>
+                                                    <th>
+                                                        <b>Tên sản phẩm <span style="color: red">*</span></b>
+                                                    </th>
+                                                    <td>
+                                                        <input type="text" th:field="*{productName}" id="productName"
+                                                               class="form-control">
+                                                        <div style="height: 28px">
+                                                            <small style="color: red"
+                                                                   th:if="${#fields.hasErrors('productName')}"
+                                                                   th:errors="*{productName}"></small>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <th>
+                                                        <b>Giá <span style="color: red">*</span></b>
+                                                    </th>
+                                                    <td>
+                                                        <input type="number" th:field="*{productPrice}" id="salary"
+                                                               class="form-control">
+                                                        <div style="height: 25px">
+                                                            <small style="color: red"
+                                                                   th:if="${#fields.hasErrors('productPrice')}"
+                                                                   th:errors="*{productPrice}"></small>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <th>
+                                                        <b>Chọn loại sản phẩm</b>
+                                                    </th>
+                                                    <td>
+                                                        <select th:field="*{productType}" id="productType"
+                                                                class="form-control">
+                                                            <option th:each="productType : ${productTypes}"
+                                                                    th:value="${productType.productTypeId}"
+                                                                    th:text="${productType.productTypeName}"></option>
+                                                        </select>
+                                                    </td>
+                                                </tr>
+                                                <br>
+                                                <tr>
+                                                    <th>
+                                                        <b>Mô tả</b>
+                                                    </th>
+                                                    <td>
+                                                    <textarea type="text" th:field="*{productDescription}"
+                                                              id="productDescription"
+                                                              class="form-control"></textarea>
+                                                    </td>
+                                                </tr>
+                                            </table>
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -122,7 +131,6 @@
                                 </div>
                             </div>
                         </div>
-                    </form>
                 </div>
             </form>
         </div>
