--- a/coffee_project/src/main/resources/templates/product/list.html
+++ b/coffee_project/src/main/resources/templates/product/list.html
@@ -122,9 +122,9 @@
         <div th:replace="layout::content1"></div>
         <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
             <h1 style="text-align: center">Quản Lý Sản Phẩm</h1>
-            <span th:if="${msg}!=null" th:text="${msg}" id="success"
-                  class="tin"
-                  style="float: left; background-color: rgba(97,139,234,0.87);font-size: 20px"></span>
+            <!--                        <span th:if="${msg}!=null" th:text="${msg}" id="success"-->
+            <!--                              class="tin"-->
+            <!--                              style="float: left; background-color: rgba(97,139,234,0.87);font-size: 20px"></span>-->
             <div class="row">
                 <a class="col-1" href="/product/create" style="color: white">
                     <button title="Thêm mới sản phẩm"
@@ -143,7 +143,7 @@
                         <option style="text-align: center" value="" selected>Chọn giá</option>
                         <option th:each="price : ${prices}" th:value="${price}" th:text="${price}+' VNĐ'"></option>
                     </select>
-                    <input style="text-align: center" type="text" name="name" placeholder="nhập tên sản phẩm ">
+                    <input th:value="${name}" type="text" name="name" placeholder="nhập tên sản phẩm ">
                     <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i>
                     </button>
                 </form>
@@ -192,49 +192,78 @@
                     </tr>
                     </tbody>
                 </table>
-                <div style="text-align: center">
-                    <a id="next" th:if="${products.hasPrevious()}"
-                       th:href="@{/product(page=${products.number-1},name=${name},productType=${productType},price=${price})}"><i
-                            class="fas fa-backward"></i></a>
-                    <span th:if="products!=null" th:text="${products.number+1}"></span>/ <span
-                        th:text="${products.totalPages}"></span>
-                    <a id="next1" th:if="${products.hasNext()}"
-                       th:href="@{/product(page=${products.number+1},name=${name},productType=${productType},price=${price})}"><i
-                            class="fas fa-forward"></i></a>
+                <!---------------------------Paging--------------------------------------------------------------->
+                <div class="d-flex justify-content-center">
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+                            <li th:class="${!products.hasPrevious()} ? 'page-item disabled' : 'page-item'"><a
+                                    class="page-link"
+                                    th:href="@{/product(page=${products.number-1},name=${name},productType=${productType},price=${price})}">Lùi</a>
+                            </li>
+
+                            <li class="page-link disabled"><span th:text="${products.number +1}"></span>/<span
+                                    th:text="${products.totalPages}"></span>
+                            </li>
+
+                            <li th:class="${!products.hasNext()} ? 'page-item disabled' : 'page-item'"><a
+                                    class="page-link"
+                                    th:href="@{/product(page=${products.number+1},name=${name},productType=${productType},price=${price})}">Tới</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <!------------------------End Paging------------------------------------------------------------>
                 </div>
-            </div>
-            <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                 aria-hidden="true">
-                <form action="/product/delete" method="post">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="exampleModalLabel">Xóa sản phẩm</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <input type="hidden" id="id" name="id">
-                                Bạn có chắc chắn muốn xóa sản phẩm
-                                <span style="color: red" id="name"> </span>?
-                                <!--                                có id là: <span style="color: red" id="idDelete"></span> ?-->
-                                <p style="color: red">Hoạt động này không thể hoàn tác! </p>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
-                                <button type="submit" class="btn btn-primary">Xóa</button>
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                     aria-hidden="true">
+                    <form action="/product/delete" method="post">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Xóa sản phẩm</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <input type="hidden" id="id" name="id">
+                                    Bạn có chắc chắn muốn xóa sản phẩm
+                                    <span style="color: red" id="name"> </span>?
+                                    <!--                                có id là: <span style="color: red" id="idDelete"></span> ?-->
+                                    <p style="color: red">Hoạt động này không thể hoàn tác! </p>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+                                    <button type="submit" class="btn btn-primary">Xóa</button>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
+        </div>
+    </div>
+</div>
+<div class="position-fixed bottom-0 end-0 p-3">
+    <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong class="me-auto">Tin nhắn</strong>
+            <small>Bây giờ</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body text-info" th:text="${msg}">
         </div>
     </div>
 </div>
 <div th:replace="layout::footer"></div>
 <script th:src="@{/bootstrap-5.0.2-dist/js/bootstrap.bundle.js}"
         src="../static/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
+<script th:if="${msg}">
+    window.onload = function () {
+        let myAlert = document.getElementById('liveToast');//select id of toast
+        let bsAlert = new bootstrap.Toast(myAlert);//inizialize it
+        bsAlert.show();//show it
+    }
+</script>
 <script th:inline="javascript">
     function showInfo(id, name, idDelete) {
         document.getElementById("id").value = id;
