--- a/coffee_project/src/main/resources/templates/accuracy.html
+++ b/coffee_project/src/main/resources/templates/accuracy.html
@@ -48,21 +48,22 @@
                                 </p>
                             </div>
                         </div>
-                        <form th:method="post" th:object="${account}"
+                        <form th:action="@{/account/reset-password}" th:method="post"
                               class="signin-form">
-                            <input th:field="*{accountName}" hidden="hidden">
+                            <input name="username" hidden="hidden" th:value="${username}">
                             <div class="form-group mb-3">
                                 <label for="password">Mật khẩu mới</label>
-                                <input id="password" name="password"  type="text" class="form-control" required>
+                                <input id="password" name="password" type="password" class="form-control" >
                             </div>
                             <div class="form-group mb-3">
                                 <label for="password2">Nhập lại mật khẩu mới</label>
-                                <input type="email" name="password2" id="password2" class="form-control" required>
+                                <input type="password" name="password2" id="password2" class="form-control" required>
                             </div>
                              <div class="form-group mb-3">
-                                <label for="emailCode">Nhập mã</label>
-                                <input type="email" name="emailCode" id="emailCode" class="form-control" required>
+                                <label for="emailCode">Nhập mã từ email</label>
+                                <input type="text" name="emailCode" id="emailCode" class="form-control" required>
                             </div>
+                            <input type="text" th:value="${code}" name="code" hidden="hidden">
                             <div class="form-group">
                                 <button type="submit" class="form-control btn btn-primary rounded submit px-3">
                                    Xác nhận
