[QUYEN][CUSTOMER] modal

--- a/coffee_project/src/main/resources/templates/customer/create.html
+++ b/coffee_project/src/main/resources/templates/customer/create.html
@@ -69,8 +69,8 @@
                                 <tr>
                                     <td></td>
                                     <td>
-                                        <a th:href="@{/customer/list}">
-                                            <button type="button" class="btn btn-primary">Quay lại
+                                        <a th:href="@{/customer/list}" style="text-decoration: none">
+                                            <button type="button" class="btn btn-secondary">Thoát
                                             </button>
                                         </a>
                                         <button type="submit" class="btn btn-primary">Thêm mới</button>
