--- a/coffee_project/src/main/resources/templates/customer/list.html
+++ b/coffee_project/src/main/resources/templates/customer/list.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+    <script src="/js/jquery-3.7.0.min.js"></script>
     <style>
-        body {
-            font-family: "Source Code Pro";
-        }
+        /*body {*/
+        /*    font-family: "Source Code Pro";*/
+        /*}*/
 
         #next {
             font-size: 1em;
@@ -34,6 +35,10 @@
             font-size: 1.5em;
             color: #007bff;
         }
+
+        .page-link {
+            color: black;
+        }
     </style>
 </head>
 <body>
@@ -43,7 +48,8 @@
         <div th:replace="layout::content1"></div>
         <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
             <h1 style="text-align: center; margin-top: 2rem"><b>Quản Lý Khách Hàng</b></h1>
-            <!--    Thanh công cụ-->
+            <!------------------------------------ Thanh công cụ ------------------------------------>
+
             <nav class="navbar navbar-inverse">
                 <div class="container-fluid">
                     <div class="navbar-form navbar-left">
@@ -53,7 +59,8 @@
                                 <i class="fa-solid fa-plus"></i></button>
                         </a>
                     </div>
-                    <!--Thanh tìm kiếm-->
+                    <!------------------------------- Thanh tìm kiếm ------------------------------------>
+
                     <form class="navbar-form navbar-right" action="/customer/list" method="get">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Nhập tên khách hàng..."
@@ -63,14 +70,28 @@
                     </form>
                 </div>
             </nav>
-            <!-- Hiển thị thông báo-->
-            <div th:if="${message!=null}" class="toast p-0" id="myToast" role="alert"
-                 aria-live="assertive" aria-atomic="true">
-                <div class="toast-header d-flex justify-content-between bg-success text-dark">
-                    <span><strong th:text="${message}"></strong></span>
+            <!-------------------------------------------Toast--------------------------------------------->
+
+            <div class="position-fixed bottom-0 end-0 p-3">
+                <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+                    <div class="toast-header">
+                        <strong class="me-auto">Tin nhắn</strong>
+                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Thoát"></button>
+                    </div>
+                    <div class="toast-body text-info" th:text="${message}">
+                    </div>
                 </div>
             </div>
-            <!--    Hiển thị danh sách-->
+            <!----------------------------------------- End Toast ----------------------------------------->
+
+<!--            <div th:if="${message!=null}" class="toast p-0" id="myToast" role="alert"-->
+<!--                 aria-live="assertive" aria-atomic="true">-->
+<!--                <div class="toast-header d-flex justify-content-between bg-success text-dark">-->
+<!--                    <span><strong th:text="${message}"></strong></span>-->
+<!--                </div>-->
+<!--            </div>-->
+            <!---------------------------------------  Hiển thị danh sách  -------------------------------->
+
             <div th:if="${!customerPage.isEmpty()}" class="table-responsive">
                 <table class="table table-hover">
                     <thead>
@@ -98,11 +119,19 @@
                         <td th:text="${#dates.format(customer.customerBirthday,'dd-MM-yyyy')}"></td>
                         <td th:text="${customer.customerPhoneNumber}"></td>
                         <td th:text="${customer.customerPoint}"></td>
-                        <td>
-                            <a th:href="@{/customer/{id}/view(id=${customer.getCustomerId()})}" class="btn btn-primary">
+                        <td style="text-align: center">
+                            <button type="button" class="btn btn-primary"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#modalView"
+                                    th:attr="onclick=|showDetail(${customer.customerId})|">
                                 <i class="fa-solid fa-circle-info"></i>
-                            </a>
+                            </button>
                         </td>
+                        <!--                        <td>-->
+                        <!--                            <a th:href="@{/customer/{id}/view(id=${customer.getCustomerId()})}" class="btn btn-primary">-->
+                        <!--                                <i class="fa-solid fa-circle-info"></i>-->
+                        <!--                            </a>-->
+                        <!--                        </td>-->
                         <td>
                             <a th:href="@{/customer/{id}/edit(id=${customer.getCustomerId()})}">
                                 <button class="btn btn-primary">
@@ -123,20 +152,81 @@
                 </table>
             </div>
 
+            <!-----------------------------------------Phân trang----------------------------------------->
 
-            <!--    Phân trang-->
+            <div class="d-flex justify-content-center">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                        <li th:class="${!customerPage.hasPrevious()} ? 'page-item disabled' : 'page-item'">
+                            <a class="page-link"
+                               th:href="@{/customer/list(page=${customerPage.number-1}, searchName=${searchName})}">Lùi
+                            </a>
+                        </li>
+                        <li class="page-link disabled"><span th:text="${customerPage.number +1}"></span>/<span
+                                th:text="${customerPage.totalPages}"></span>
+                        </li>
+                        <li th:class="${!customerPage.hasNext()} ? 'page-item disabled' : 'page-item'">
+                            <a class="page-link"
+                               th:href="@{/customer/list(page=${customerPage.number+1},searchName=${searchName})}">Tới
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <!--------------------------------------------------------------------------------------->
+            <!--                <div style="text-align: center ; gap: 1rem">-->
+            <!--                    <a id="next" th:if="${customerPage.hasPrevious()}"-->
+            <!--                       th:href="@{/customer/list(page=${customerPage.number-1}, searchName=${searchName})}"><i-->
+            <!--                            class="fas fa-backward"></i></a>-->
+            <!--                    <span th:text="${customerPage.number+1}"></span>/<span th:text="${customerPage.totalPages}"></span>-->
+            <!--                    <a id="next1" th:if="${customerPage.hasNext()}"-->
+            <!--                       th:href="@{/customer/list(page=${customerPage.number+1},searchName=${searchName})}"><i-->
+            <!--                            class="fas fa-forward"></i></a>-->
+            <!--                </div>-->
+            <!------------------------------------ Modal Detail------------------------------------->
 
-            <div style="text-align: center ; gap: 1rem">
-                <a id="next" th:if="${customerPage.hasPrevious()}"
-                   th:href="@{/customer/list(page=${customerPage.number-1}, searchName=${searchName})}"><i
-                        class="fas fa-backward"></i></a>
-                <span th:text="${customerPage.number+1}"></span>/<span th:text="${customerPage.totalPages}"></span>
-                <a id="next1" th:if="${customerPage.hasNext()}"
-                   th:href="@{/customer/list(page=${customerPage.number+1},searchName=${searchName})}"><i
-                        class="fas fa-forward"></i></a>
+            <div class="modal fade" id="modalView" tabindex="-1" aria-labelledby="viewModalLabel"
+                 aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="viewModalLabel1" style="text-align: center"><strong>Thông
+                                tin chi tiết</strong></h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <table class="table" style="border-color: white">
+                                <tr>
+                                    <td><strong>Tên: </strong></td>
+                                    <td><span id="customerName"></span></td>
+                                </tr>
+                                <tr>
+                                    <td><strong>Giới tính: </strong></td>
+                                    <td><span id="customerGender"></span></td>
+                                </tr>
+                                <tr>
+                                    <td><strong>Ngày Sinh: </strong></td>
+                                    <td><span id="customerBirthday"></span></td>
+                                </tr>
+                                <tr>
+                                    <td><strong>Điện thoại: </strong></td>
+                                    <td><span id="customerPhoneNumber"></span></td>
+                                </tr>
+                                <tr>
+                                    <td><strong>Điểm tích lũy: </strong></td>
+                                    <td><span id="customerPoint"></span></td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Thoát</button>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <!-- Delete Modal -->
+            <!-------------------------------------- Delete Modal --------------------------------------->
 
             <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel"
                  aria-hidden="true">
@@ -144,7 +234,8 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="deleteModalLabel">Hộp thoại</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Không"></button>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Không"></button>
                         </div>
                         <div class="modal-body">
                             Bạn có chắc chắn muốn xóa <strong id="nameDelete"></strong> ?</span>
@@ -162,6 +253,7 @@
     </div>
 </div>
 <div th:replace="layout::footer"></div>
+</body>
 <script th:src="@{/bootstrap-5.0.2-dist/js/bootstrap.bundle.js}"
         src="../static/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
 <script>
@@ -170,11 +262,42 @@
         document.getElementById('idDelete').href = '/customer/' + id + '/delete'
     }
 
-    window.onload = (event) => {
-        var toastLiveExample = document.getElementById('myToast')
-        var toast = new bootstrap.Toast(toastLiveExample)
-        toast.show()
+    // window.onload = (event) => {
+    //     var toastLiveExample = document.getElementById('myToast')
+    //     var toast = new bootstrap.Toast(toastLiveExample)
+    //     toast.show()
+    // }
+
+    function showDetail(id) {
+        $.ajax({
+            contentType: "application/json",
+            method: "GET",
+            dataType: "json",
+            url: "http://localhost:8080/api/customer/view/" + id,
+            success: function (data) {
+                let gender = "";
+                if (data.customerGender) {
+                    gender = "Nam";
+                } else {
+                    gender = "Nữ";
+                }
+                let birthday = data.customerBirthday.split("-").reverse().join("-");
+                $("#customerName").text(data.customerName);
+                $("#customerGender").text(gender);
+                $("#customerBirthday").text(birthday);
+                $("#customerPhoneNumber").text(data.customerPhoneNumber);
+                $("#customerPoint").text(data.customerPoint);
+                $("#modalView").show();
+
+            }
+        })
     }
 </script>
-</body>
+<script th:if="${message}">
+    window.onload = function () {
+        let myAlert = document.getElementById('liveToast');//select id of toast
+        let bsAlert = new bootstrap.Toast(myAlert);//inizialize it
+        bsAlert.show();//show it
+    }
+</script>
 </html>
