[QUYEN][CUSTOMER][QUEENCOFEE] delete

--- a/coffee_project/src/main/resources/templates/customer/edit.html
+++ b/coffee_project/src/main/resources/templates/customer/edit.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
     <style>
-        body {
-            font-family: "Source Code Pro";
-        }
+        /*body {*/
+        /*    font-family: "Source Code Pro";*/
+        /*}*/
 
         .form {
             width: 70%;
