[Quan][Account] thêm chức năng xóa,update chức năng thêm bị trùng

--- a/coffee_project/src/main/resources/templates/account/list-account.html
+++ b/coffee_project/src/main/resources/templates/account/list-account.html
@@ -114,13 +114,13 @@
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form action="/acount/delete" method="post">
+            <form action="/account/delete" method="post">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Bạn muốn xóa tài khoản :</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <input type="text" hidden="hidden" id="accountName">
+                    <input type="text" hidden="hidden" name="accountName" id="accountName">
                     <span id="usernameDelete" ></span>
                 </div>
                 <div class="modal-footer">
